--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -73,6 +73,7 @@ figure {
   // svg { fill: #000 }
 }
 
-.icon--gray {
-  color: #ddd;
-}
+.icon--gray { color: #ddd }
+.icon--black { color: #000 }
+
+
