--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -36,7 +36,7 @@
 @import 'layout/navigation';
 // @import 'layout/main';
 @import 'layout/sidebar';
-// @import 'layout/footer';
+@import 'layout/footer';
 
 // components
 // --------------------------------------------------
