--- a/post.hbs
+++ b/post.hbs
@@ -1,5 +1,8 @@
 {{!< default}}
 
+{{!-- Class for <body> --}}
+{{#contentFor "special_body_class"}}is-article{{/contentFor}}
+
 <div class="content-wrap">
     <div class="content">
         {{!-- Article - partials/article/article.hbs --}}
