--- a/src/scss/base/_utilities.scss
+++ b/src/scss/base/_utilities.scss
@@ -57,6 +57,7 @@
 .u-textUppercase { text-transform: uppercase }
 .u-textCapitalize { text-transform: capitalize }
 .u-textAlignCenter { text-align: center }
+.u-block { display: block }
 
 // Margin
 .u-marginAuto {
