--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,36 +1,3 @@
-h1,
-h2,
-h3,
-h4,
-h5,
-h6, .footer, .u-meta {
-  font-family: "Source Sans Pro", sans-serif;
-}
-
-.u-absolute0 {
-  bottom: 0;
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
-.u-flex, .u-flexCenter, .u-flexColumnCenter, .u-flexColumnTop, .content-wrap {
-  display: flex;
-}
-
-.u-flexCenter {
-  align-items: center;
-}
-
-.u-flexColumnCenter, .u-flexColumnTop, .content-wrap {
-  flex-direction: column;
-}
-
-.u-flexColumnCenter {
-  justify-content: center;
-}
-
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -370,6 +337,34 @@ template {
   display: none;
 }
 
+h1, h2, h3, h4, h5, h6, .footer, .u-meta, .article-meta {
+  font-family: "Source Sans Pro", sans-serif;
+}
+
+.u-absolute0 {
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.u-flex, .u-flexCenter, .u-flexColumnCenter, .u-flexColumnTop, .content-wrap {
+  display: flex;
+}
+
+.u-flexCenter {
+  align-items: center;
+}
+
+.u-flexColumnCenter, .u-flexColumnTop, .content-wrap {
+  flex-direction: column;
+}
+
+.u-flexColumnCenter {
+  justify-content: center;
+}
+
 *,
 *::before,
 *::after {
@@ -425,6 +420,10 @@ img:not([src]) {
 
 figure {
   margin: 0;
+}
+
+.text--green {
+  color: #00a562;
 }
 
 .icon {
@@ -590,6 +589,10 @@ figure {
   text-align: center;
 }
 
+.u-block {
+  display: block;
+}
+
 .u-marginAuto {
   margin-right: auto;
   margin-left: auto;
@@ -687,15 +690,17 @@ figure {
   justify-content: flex-end;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
   line-height: 1.2;
-  margin: .2em 0;
-  letter-spacing: -.02em;
+  margin: 0.2em 0;
+  letter-spacing: -0.02em;
+}
+
+h1 {
+  font-size: 36px;
+  font-size: 2.25rem;
+  font-weight: 800;
+  letter-spacing: -1.3px;
 }
 
 .rimay-paway {
@@ -913,6 +918,10 @@ h6 {
   font-size: 15px;
   color: #777;
   line-height: 2.8rem;
+}
+
+.footer-copy a:hover {
+  border-bottom-color: #777;
 }
 
 .social-media {
@@ -1162,9 +1171,238 @@ h6 {
   }
 }
 
+/* Code Boxes
+/* ---------------------------------------------------------- */
+code,
+pre {
+  font-family: Menlo, Courier, monospace;
+  white-space: pre;
+  word-spacing: normal;
+  word-break: normal;
+  word-wrap: normal;
+  tab-size: 4;
+  hyphens: none;
+}
+
+.article-inner code {
+  padding: 0 5px 2px;
+  font-size: 0.8em;
+  line-height: 1em;
+  font-weight: 400 !important;
+  background: #e5eff5;
+  border-radius: 3px;
+  white-space: pre-wrap;
+}
+
+.article-inner pre {
+  overflow-x: auto;
+  margin: 1.5em 0 3em;
+  padding: 20px;
+  max-width: 100%;
+  border: none;
+  color: #e5eff5;
+  font-size: 0.875rem;
+  line-height: 1.6em;
+  background: #2a3644;
+  border-radius: 5px;
+}
+
+.article-inner pre code {
+  padding: 0;
+  font-size: inherit;
+  line-height: inherit;
+  background: transparent;
+  white-space: pre;
+}
+
+.article-inner pre code * {
+  color: inherit;
+}
+
+/* Prism
+/* ---------------------------------------------------------- */
+pre[class*="language-"] {
+  padding: 1.25rem;
+  margin: 0;
+  overflow: auto;
+  border-radius: 8px;
+}
+
+:not(pre) > code[class*="language-"],
+pre[class*="language-"] {
+  border: none;
+  background: #2a3644;
+}
+
+/* Inline code */
+:not(pre) > code[class*="language-"] {
+  padding: .3em .4em;
+  border-radius: .3em;
+  white-space: normal;
+  background: #e5eff5;
+  text-shadow: none;
+  color: #343f44;
+  font-size: 0.9em;
+}
+
+a > code[class*="language-"] {
+  color: #3eb0ef;
+}
+
+.token.comment,
+.token.prolog,
+.token.doctype,
+.token.cdata {
+  color: rgba(255, 255, 255, 0.4);
+}
+
+.token.punctuation {
+  color: #fff;
+}
+
+.namespace {
+  opacity: .7;
+}
+
+.token.property,
+.token.tag,
+.token.constant,
+.token.symbol,
+.token.deleted {
+  color: #ff5884;
+}
+
+.token.boolean,
+.token.number {
+  color: #ae81ff;
+}
+
+.token.selector,
+.token.attr-name,
+.token.string,
+.token.char,
+.token.builtin,
+.token.inserted {
+  color: #e6db74;
+}
+
+.token.operator,
+.token.entity,
+.token.url,
+.language-css .token.string,
+.style .token.string,
+.token.variable {
+  color: #fff;
+}
+
+.token.atrule,
+.token.attr-value,
+.token.function,
+.token.class-name {
+  color: #a6e22e;
+}
+
+.token.keyword {
+  color: #66d9ef;
+}
+
+.token.regex,
+.token.important {
+  color: #fd971f;
+}
+
+.token.important,
+.token.bold {
+  font-weight: bold;
+}
+
+.token.italic {
+  font-style: italic;
+}
+
+.token.entity {
+  cursor: help;
+}
+
 .rimay-home--title {
   margin: 15px 0;
   letter-spacing: -.6px;
+}
+
+.article {
+  margin: 0 0 -20px;
+  padding: 0 5% 30px;
+  border-top: 2px solid #f1f1f1;
+  position: relative;
+}
+
+.article-title {
+  padding-top: 20px;
+  font-size: 2rem;
+  font-weight: 800;
+  line-height: 1.1;
+  margin-bottom: 0;
+  margin-right: 20px;
+}
+
+.article-meta {
+  display: flex;
+  justify-content: space-between;
+  margin: 25px 0;
+  color: #777;
+  font-weight: 600;
+}
+
+.article-byline a {
+  font-size: 13px;
+  font-size: 1.125rem;
+  font-weight: 700;
+  color: #333;
+  line-height: 20px;
+}
+
+.article-divider {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.article-image {
+  margin: auto;
+  display: block;
+  width: 125%;
+  max-width: 125%;
+  margin-left: -12.5%;
+}
+
+.article-inner {
+  font-weight: 400;
+  color: #333;
+  letter-spacing: -.1px;
+  margin: 20px 0;
+  font-size: 21px;
+  line-height: 1.6;
+}
+
+.article-inner > * {
+  margin: 15px 0;
+}
+
+.article-inner a {
+  border-bottom: 1px solid #f1f1f1;
+}
+
+.article-inner a:hover {
+  border-bottom-color: #00a562;
+}
+
+@media only screen and (min-width: 700px) {
+  .article {
+    padding: 0 10% 30px;
+  }
+  .article-title {
+    font-size: 3rem;
+    margin-right: 0;
+  }
 }
 
 /*# sourceMappingURL=map/main.css.map */
