--- a/default.hbs
+++ b/default.hbs
@@ -19,7 +19,7 @@
     {{!-- This tag outputs SEO meta+structured data and other important settings --}}
     {{ghost_head}}
 </head>
-<body>
+<body class="{{block "special_body_class"}}">
     <div class="rimay">
         {{!-- Header --}}
         {{> "header"}}
@@ -29,6 +29,9 @@
         {{!-- Footer --}}
         {{> "footer"}}
     </div>
+
+    {{!-- Site Url --}}
+    <script> var siteUrl = '{{@site.url}}'; </script>
 
     {{!-- The #block helper will pull in data from the #contentFor other template files. In this case, there's some JavaScript which we only want to use in post.hbs, but it needs to be included down here, after jQuery has already loaded. --}}
     {{{block "scripts"}}}
