--- a/partials/article/article.hbs
+++ b/partials/article/article.hbs
@@ -4,9 +4,9 @@
         <h1 class="article-title">{{title}}</h1>
         <div class="article-meta">
             <div class="article-byline">
-                {{#primary_author}}<a aria-label="{{t "Post by"}} {{name}}" href="{{url}}">{{name}}</a>{{/primary_author}}
-                <span class="article-divider">/</span>
-                <time class="datetime u-meta-time " datetime="{{date format=" YYYY-MM-DD "}}">{{date published_at timeago="true"}}</time>
+                {{#primary_author}}<a aria-label="{{t "Post by"}} {{name}}" href="{{url}}" class="u-colorHoverPrimary u-colorInherit u-relative u-textCapitalize">{{name}}</a>{{/primary_author}}
+                <span class="article-divider text--green">/</span>
+                <time class="datetime u-meta-time" datetime="{{date format=" YYYY-MM-DD "}}">{{date published_at timeago="true"}}</time>
             </div>
             <div class="article-comments">Comments</div>
         </div>
@@ -14,7 +14,7 @@
     {{!-- Article Body --}}
     <div class="article-body">
         {{#if feature_image}}
-            <figure class="article-image u-block u-marginAuto u-maxWidth1200">
+            <figure class="article-image u-block u-marginAuto u-textAlignCenter">
                 <img class="u-block u-marginAuto"
                     srcset="{{img_url feature_image size="s"}} 300w,
                             {{img_url feature_image size="m"}} 600w,
