--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -8,9 +8,9 @@
             <a title="GitHub" href="https://instagram.com/godofredoninja" target="_blank" rel="noopener noreferrer"><span class="icon icon--github icon--black">{{> "icons/github"}}</span> <span>GitHub</span></a>
         </div>
         {{!-- copy --}}
-        <div class="footer-copy">
+        <p class="footer-copy">
             &copy; {{date format="YYYY"}} <a href="{{@site.url}}">{{@site.title}}</a>
             Design with <3 by <a href="https://godofredo.ninja" title="Developer FullStack.">@GodoFredoNinja</a>
-        </div>
+        </p>
     </div>
 </footer>
