--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,15 +1,14 @@
-h1,
-h2,
-h3,
-h4,
-h5,
-h6
-{
-    line-height: 1.2;
+h1, h2, h3, h4, h5, h6 {
+  line-height: 1.2;
+  margin: 0.2em 0;
+  letter-spacing: -0.02em;
 
-    margin: .2em 0;
+  @extend %primary-font;
+}
 
-    letter-spacing: -.02em;
-
-    @extend %primary-font;
+h1 {
+  font-size: 36px;
+  font-size: 2.25rem;
+  font-weight: 800;
+  letter-spacing: -1.3px;
 }
