--- a/src/scss/components/_code.scss
+++ b/src/scss/components/_code.scss
@@ -56,7 +56,7 @@ pre {
 /* ---------------------------------------------------------- */
 pre[class*="language-"] {
 	padding: 1.25rem;
-	margin: 0;
+	margin-bottom: 0;
 	overflow: auto;
 	border-radius: 8px;
 }
