--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -337,6 +337,8 @@ template {
   display: none;
 }
 
+/* Typography
+/* ---------------------------------------------------------- */
 h1, h2, h3, h4, h5, h6, .footer, .u-meta, .article-meta {
   font-family: "Source Sans Pro", sans-serif;
 }
@@ -349,19 +351,23 @@ h1, h2, h3, h4, h5, h6, .footer, .u-meta, .article-meta {
   top: 0;
 }
 
-.u-flex, .u-flexCenter, .u-flexColumnCenter, .u-flexColumnTop, .content-wrap {
+.u-flex, .u-flexCenter, .u-flexColumnCenter, .u-flexColumnTop, .content-wrap, .article-inner, .kg-gallery-container, .kg-gallery-row, .kg-embed-card {
   display: flex;
 }
 
-.u-flexCenter {
+.u-flexCenter, .article-inner, .kg-embed-card {
   align-items: center;
 }
 
-.u-flexColumnCenter, .u-flexColumnTop, .content-wrap {
+.u-flexColumnCenter, .u-flexColumnTop, .content-wrap, .article-inner, .kg-gallery-container, .kg-embed-card {
   flex-direction: column;
 }
 
-.u-flexColumnCenter {
+.kg-gallery-row {
+  flex-direction: row;
+}
+
+.u-flexColumnCenter, .kg-gallery-row {
   justify-content: center;
 }
 
@@ -386,8 +392,7 @@ body {
   letter-spacing: 0;
 }
 
-li a,
-p a {
+li a, figcaption a, p a {
   transition: color, border-color 0.2s linear;
   color: #00a562;
   border-bottom: 1px solid transparent;
@@ -397,6 +402,10 @@ a,
 li a,
 p a {
   text-decoration: none;
+}
+
+ul, ol {
+  margin: 0;
 }
 
 svg {
@@ -422,6 +431,12 @@ figure {
   margin: 0;
 }
 
+figcaption {
+  margin-top: 10px;
+  font-size: .8em;
+  font-style: italic;
+}
+
 .text--green {
   color: #00a562;
 }
@@ -439,6 +454,43 @@ figure {
 
 .icon--black {
   color: #000;
+}
+
+.video-responsive {
+  display: block;
+  height: 0;
+  overflow: hidden;
+  padding: 0 0 56.25%;
+  position: relative;
+  width: 100%;
+}
+
+.video-responsive iframe {
+  border: 0;
+  bottom: 0;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.video-responsive video {
+  border: 0;
+  bottom: 0;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.medium-zoom-overlay {
+  z-index: 50;
+}
+
+.medium-zoom-image--opened {
+  z-index: 51;
 }
 
 .u-colorInherit {
@@ -692,15 +744,32 @@ figure {
 
 h1, h2, h3, h4, h5, h6 {
   line-height: 1.2;
-  margin: 0.2em 0;
   letter-spacing: -0.02em;
+  margin: 0;
 }
 
 h1 {
-  font-size: 36px;
-  font-size: 2.25rem;
-  font-weight: 800;
-  letter-spacing: -1.3px;
+  font-size: 2.375rem;
+}
+
+h2 {
+  font-size: 2.125rem;
+}
+
+h3 {
+  font-size: 1.875rem;
+}
+
+h4 {
+  font-size: 1.625rem;
+}
+
+h5 {
+  font-size: 1.5rem;
+}
+
+h6 {
+  font-size: 1.25rem;
 }
 
 .rimay-paway {
@@ -1223,7 +1292,7 @@ pre {
 /* ---------------------------------------------------------- */
 pre[class*="language-"] {
   padding: 1.25rem;
-  margin: 0;
+  margin-bottom: 0;
   overflow: auto;
   border-radius: 8px;
 }
@@ -1384,7 +1453,12 @@ a > code[class*="language-"] {
 }
 
 .article-inner > * {
-  margin: 15px 0;
+  margin-top: 26px;
+  min-width: 100%;
+}
+
+.article-inner p {
+  margin-bottom: 0;
 }
 
 .article-inner a {
@@ -1393,6 +1467,69 @@ a > code[class*="language-"] {
 
 .article-inner a:hover {
   border-bottom-color: #00a562;
+}
+
+.article-inner h1 + p, .article-inner h2 + p, .article-inner h3 + p, .article-inner h4 + p, .article-inner h5 + p, .article-inner h6 + p {
+  margin-top: 0.8rem;
+}
+
+.article-inner ul,
+.article-inner ol {
+  counter-reset: post;
+  list-style-type: none;
+  padding-left: 20px;
+}
+
+.article-inner ul li,
+.article-inner ol li {
+  margin-left: 30px;
+}
+
+.article-inner ul li::before,
+.article-inner ol li::before {
+  box-sizing: border-box;
+  display: inline-block;
+  margin-left: -22px;
+  position: absolute;
+  text-align: right;
+}
+
+.article-inner ul > li::before {
+  content: "\2022";
+  opacity: .9;
+  font-family: Georgia, Arial, system-ui;
+  transform: scale(1.1);
+}
+
+.article-inner ol > li::before {
+  content: counter(post) ".";
+  counter-increment: post;
+  color: #777;
+  padding-right: 12px;
+}
+
+.kg-gallery-container {
+  max-width: 1000px;
+  width: 100vw;
+}
+
+.kg-gallery-row:not(:first-of-type) {
+  margin: 0.75em 0 0 0;
+}
+
+.kg-gallery-image img {
+  display: block;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.kg-gallery-image:not(:first-of-type) {
+  margin: 0 0 0 0.75em;
+}
+
+.kg-embed-card {
+  max-width: 100%;
 }
 
 @media only screen and (min-width: 700px) {
