--- a/partials/article/article.hbs
+++ b/partials/article/article.hbs
@@ -15,7 +15,7 @@
     <div class="article-body">
         {{#if feature_image}}
             <figure class="article-image u-block u-marginAuto u-textAlignCenter">
-                <img class="u-block u-marginAuto"
+                <img class="u-block u-marginAuto rimay-zoom"
                     srcset="{{img_url feature_image size="s"}} 300w,
                             {{img_url feature_image size="m"}} 600w,
                             {{img_url feature_image size="l"}} 1000w,
