--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -9,6 +9,21 @@ $primary-color: #00a562;
 $primary-font: 'Source Sans Pro', sans-serif;
 $secundary-font: Helvetica Neue, Helvetica, Arial, sans-serif;
 
+/* Typography
+/* ---------------------------------------------------------- */
+$font-size-root:  16px;
+
+$font-size-h1:    2.375rem;
+$font-size-h2:    2.125rem;
+$font-size-h3:    1.875rem;
+$font-size-h4:    1.625rem;
+$font-size-h5:    1.5rem;
+$font-size-h6:    1.25rem;
+
+$headings-font-family:     $primary-font;
+$headings-font-weight:     700;
+$headings-line-height:     1.2;
+
 // Media Query Ranges
 // ==========================================================================
 $sm: 640px;
