--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,14 +1,15 @@
 h1, h2, h3, h4, h5, h6 {
-  line-height: 1.2;
-  margin: 0.2em 0;
-  letter-spacing: -0.02em;
-
   @extend %primary-font;
+
+  line-height: $headings-line-height;
+  letter-spacing: -0.02em;
+  margin: 0;
+
 }
 
-h1 {
-  font-size: 36px;
-  font-size: 2.25rem;
-  font-weight: 800;
-  letter-spacing: -1.3px;
-}
+h1 { font-size: $font-size-h1 }
+h2 { font-size: $font-size-h2 }
+h3 { font-size: $font-size-h3 }
+h4 { font-size: $font-size-h4 }
+h5 { font-size: $font-size-h5 }
+h6 { font-size: $font-size-h6 }
