--- a/src/scss/pages/_post.scss
+++ b/src/scss/pages/_post.scss
@@ -56,6 +56,10 @@
 // Article Inner
 // ==========================================================================
 .article-inner {
+  @extend %flex;
+  @extend %flex-direction-column;
+  @extend %flex-align-items-center;
+
   font-weight: 400;
   color: #333;
   letter-spacing: -.1px;
@@ -63,16 +67,112 @@
   font-size: 21px;
   line-height: 1.6;
 
-  & > * { margin: 15px 0; }
+  & > * {
+    margin-top: 26px;
+    min-width: 100%;
+  }
+
+  p { margin-bottom: 0 }
 
   a {
     border-bottom: 1px solid #f1f1f1;
     &:hover { border-bottom-color: $primary-color }
   }
 
+  h1, h2, h3, h4, h5, h6 {
+    // margin: .75em 0;
+
+    & + p { margin-top: 0.8rem }
+  }
+
+  // UL and OL
+  ul,
+  ol {
+    counter-reset: post;
+    list-style-type: none;
+    padding-left: 20px;
+
+    li {
+      margin-left: 30px;
+
+      &::before {
+        box-sizing: border-box;
+        display: inline-block;
+        margin-left: -22px;
+        position: absolute;
+        text-align: right;
+      }
+    }
+  }
+
+  ul > li::before {
+    content: "\2022";
+    opacity: .9;
+    font-family: Georgia, Arial, system-ui; // stylelint-disable-line
+    transform: scale(1.1);
+  }
+
+  ol > li::before {
+    content: counter(post) ".";
+    counter-increment: post;
+    color: #777;
+    padding-right: 12px;
+  }
 
 }
 
+// Clases for box of ghost
+// ==========================================================================
+.kg-gallery {
+  &-container {
+    @extend %flex;
+    @extend %flex-direction-column;
+    // display: flex;
+    // flex-direction: column;
+    max-width: 1000px;
+    width: 100vw;
+  }
+
+  &-row {
+    @extend %flex;
+    @extend %flex-direction-row;
+    @extend %flex-justify-content-center;
+    // display: flex;
+    // flex-direction: row;
+    // justify-content: center;
+
+    &:not(:first-of-type) { margin: 0.75em 0 0 0 }
+  }
+
+  &-image {
+    img {
+      display: block;
+      margin: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+    &:not(:first-of-type) { margin: 0 0 0 0.75em }
+  }
+}
+
+// .kg-code-card pre { margin-top: 0 }
+
+// stylelint-disable-next-line
+.kg-embed-card, .kg-gallery-container {
+  @extend %flex;
+  @extend %flex-direction-column;
+  // display: flex;
+  // flex-direction: column;
+  // max-width: 100%;
+}
+
+// stylelint-disable-next-line
+.kg-embed-card {
+  @extend %flex-align-items-center;
+  // align-items: center;
+  max-width: 100%;
+}
 
 @media #{$md-and-up} {
   .article {
