--- a/src/scss/pages/_post.scss
+++ b/src/scss/pages/_post.scss
@@ -174,6 +174,15 @@
   max-width: 100%;
 }
 
+// Article newsletter
+// ==========================================================================
+.newsletter {
+  margin-top: 30px;
+  padding-top: 10px;
+  border-top: 2px solid #ddd;
+}
+
+
 @media #{$md-and-up} {
   .article {
     padding: 0 10% 30px;
