--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -437,6 +437,11 @@ figcaption {
   font-style: italic;
 }
 
+button,
+input {
+  overflow: visible;
+}
+
 button, input, select, textarea {
   background-color: transparent;
   color: inherit;
@@ -461,6 +466,10 @@ button, input, select, textarea {
 
 .icon--black {
   color: #000;
+}
+
+.icon--white {
+  color: #fff;
 }
 
 .video-responsive {
@@ -1595,6 +1604,58 @@ a > code[class*="language-"] {
   border-top: 2px solid #ddd;
 }
 
+.social-share {
+  bottom: -1px;
+}
+
+.social-share .icon {
+  background: #00a562;
+  width: 60px;
+  height: 60px;
+  padding: 18px;
+  border-right: 1px solid #57c196;
+}
+
+.social-share .icon:hover {
+  background-color: #037545;
+}
+
+.shortlink-input {
+  font-size: 18px;
+  line-height: 2.8em;
+  cursor: pointer;
+  border: 0;
+  width: auto;
+  min-width: 210px;
+  padding: 5px 50px 5px 20px;
+  color: #777;
+  transition: color .15s linear;
+  text-align: center;
+}
+
+.shortlink-input:focus, .shortlink-input:hover {
+  color: #00a562;
+  background-color: transparent;
+}
+
+.shortlink-indicator {
+  font-size: 15px;
+  border-radius: 3px;
+  padding: 0 10px;
+  color: #fff;
+  background-color: #ddd;
+  transition: background-color .15s linear;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none;
+  display: block;
+  text-align: center;
+  height: 22px;
+  white-space: nowrap;
+}
+
 @media only screen and (min-width: 700px) {
   .article {
     padding: 0 10% 30px;
@@ -1602,6 +1663,9 @@ a > code[class*="language-"] {
   .article-title {
     font-size: 3rem;
     margin-right: 0;
+  }
+  .article-footer {
+    border-bottom: 1px solid #ddd;
   }
 }
 
