--- a/src/scss/pages/_post.scss
+++ b/src/scss/pages/_post.scss
@@ -182,6 +182,62 @@
   border-top: 2px solid #ddd;
 }
 
+// Article Footer
+// ==========================================================================
+
+.social-share {
+  bottom: -1px;
+
+  .icon {
+    background: $primary-color;
+    width: 60px;
+    height: 60px;
+    padding: 18px;
+    border-right: 1px solid #57c196;
+
+    &:hover {
+      background-color: #037545
+    }
+  }
+}
+
+
+.shortlink-input {
+  font-size: 18px;
+  line-height: 2.8em;
+  cursor: pointer;
+  border: 0;
+  width: auto;
+  min-width: 210px;
+  padding: 5px 50px 5px 20px;
+  color: #777;
+  transition: color .15s linear;
+  text-align: center;
+
+  &:focus,
+  &:hover {
+    color: $primary-color;
+    background-color: transparent;
+  }
+}
+
+.shortlink-indicator {
+  font-size: 15px;
+  border-radius: 3px;
+  padding: 0 10px;
+  color: #fff;
+  background-color: #ddd;
+  transition: background-color .15s linear;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none;
+  display: block;
+  text-align: center;
+  height: 22px;
+  white-space: nowrap;
+}
 
 @media #{$md-and-up} {
   .article {
@@ -191,5 +247,7 @@
       font-size: 3rem;
       margin-right: 0;
     }
+
+    &-footer { border-bottom: 1px solid #ddd }
   }
 }
