--- a/partials/article/topics.hbs
+++ b/partials/article/topics.hbs
@@ -2,7 +2,7 @@
 
 <div class="article-tags">
     <h3>{{t "Tags"}}</h3>
-    <ul class="menu article-tags-item">
+    <ul class="menu article-tags-wrap u-fontWeightMedium u-textCapitalize u-marginTop20 u-marginBottom20 u-clear u-unstyled">
         {{#foreach tags}}
             <li class="menu-item">
                 <a href="{{url absolute="true"}}" title="{{name}}">{{name}}</a>
