--- a/src/scss/pages/_post.scss
+++ b/src/scss/pages/_post.scss
@@ -4,6 +4,19 @@
   border-top: 2px solid #f1f1f1;
   position: relative;
 
+  // backaground in the footer page
+  &::before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    width: 105vw;
+    left: -10%;
+    height: 500px;
+    max-height: 70vh;
+    bottom: 0;
+    background-image: linear-gradient(0deg,#f0f0f0,#fff);
+  }
+
   // title
   &-title {
     padding-top: 20px;
@@ -239,6 +252,24 @@
   white-space: nowrap;
 }
 
+// Article Tags or Topic
+// ==========================================================================
+.article-tags {
+  &-wrap  {
+    font-size: 1rem;
+    width: 300px;
+    max-width: 300px;
+    line-height: 1.5;
+  }
+
+  .menu-item {
+    width: 50%;
+    margin: .3em 0;
+    position: relative;
+    float: left;
+  }
+}
+
 @media #{$md-and-up} {
   .article {
     padding: 0 10% 30px;
@@ -249,5 +280,23 @@
     }
 
     &-footer { border-bottom: 1px solid #ddd }
+  }
+}
+
+@media #{$lg-and-up} {
+  .article {
+    &::before {
+      left: -210px;
+      width: 100vw;
+    }
+  }
+}
+
+@media #{$xl-and-up} {
+  .article {
+    &::before {
+      left: -250px;
+      width: 100vw;
+    }
   }
 }
