add article related

--- a/post.hbs
+++ b/post.hbs
@@ -12,3 +12,6 @@
     {{!-- sidebar - partials/sidebar/sidebar.hbs --}}
     {{> "sidebar/sidebar"}}
 </div>
+
+{{!-- Article Related - partials/article/related.hbs --}}
+{{> "article/related"}}
