--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1472,7 +1472,7 @@ a > code[class*="language-"] {
 }
 
 .article {
-  margin: 0 0 -20px;
+  margin: 0;
   padding: 0 5% 30px;
   border-top: 2px solid #f1f1f1;
   position: relative;
