--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -1,9 +1,8 @@
 <div class="content-wrap">
     <div class="content">
         {{!-- Title For Home Page --}}
-        {{#is "home"}}
-            <h2 class="rimay-home--title u-fontSize22">{{t "The Latest"}}</h2>
-        {{/is}}
+        {{#is "home"}}<h2 class="rimay-home--title u-fontSize22">{{t "The Latest"}}</h2>{{/is}}
+        {{#is "tag"}}<h1 class="rimay--title">{{#tag}}{{name}}{{/tag}}</h1>{{/is}}
 
         <div class="story-feed">
             <div class="story-feed-content">
