--- a/src/scss/pages/_post.scss
+++ b/src/scss/pages/_post.scss
@@ -89,13 +89,15 @@
 
   a {
     border-bottom: 1px solid #f1f1f1;
+    color: $primary-color;
+
     &:hover { border-bottom-color: $primary-color }
   }
 
   h1, h2, h3, h4, h5, h6 {
     // margin: .75em 0;
 
-    & + p { margin-top: 0.8rem }
+    & + p { margin-top: 0.625rem }
   }
 
   // UL and OL
