--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -45,7 +45,7 @@
 @import 'components/buttons';
 // @import 'components/navigation';
 @import 'components/pagination';
-// @import 'components/subscribe';
+@import 'components/subscribe';
 // @import 'components/koenig';
 @import 'components/story';
 // @import 'components/tag-card';
