--- a/partials/widget/newsletter.hbs
+++ b/partials/widget/newsletter.hbs
@@ -1,17 +1,19 @@
 {{#if @labs.subscribers}}
-<aside class="newsletter">
+<aside class="newsletter u-marginTop30">
     <div class="newsletter-wrap">
         <h5 class="newsletter-title">{{t "Want more stuff like this?"}}</h5>
-        <label for="subscribeEmail" class="newsletter-description u-fontSizeSmall u-block">{{t "Get the best viral stories straight into your inbox!"}}</label>
+        <div class="newsletter-right">
+            <label for="subscribeEmail" class="newsletter-label">{{t "Get the best viral stories straight into your inbox!"}}</label>
 
-        {{subscribe_form
-        form_class="form"
-        input_id="subscribeEmail"
-        input_class="form-input"
-        button_class="button button-black button-primary"
-        placeholder=(t "Your email address")
-        autofocus=""
-        }}
+            {{subscribe_form
+            form_class="simply-subscribe-tracking newsletter-form u-flexCenter"
+            input_id="subscribeEmail"
+            input_class="subscribe-input"
+            button_class="button button--black button--primary"
+            placeholder=(t "Your email address")
+            autofocus=""
+            }}
+        </div>
     </div>
 </aside>
 {{/if}}
