add instagram widget

--- a/partials/article/related.hbs
+++ b/partials/article/related.hbs
@@ -13,8 +13,8 @@
         </div>
     </div>
 
-    {{!-- sidebar - partials/sidebar/sidebar.hbs --}}
-    {{> "sidebar/sidebar"}}
+    {{!-- sidebar - partials/sidebar/sidebar-related.hbs --}}
+    {{> "sidebar/sidebar-related"}}
 </div>
 
 {{/if}}
