--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -509,6 +509,54 @@ hr {
   font-weight: 900;
 }
 
+.instagram-wrap {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  flex: 0 1 auto;
+}
+
+.instagram .icon {
+  height: 24px;
+  width: 24px;
+}
+
+.instagram-col {
+  flex: 0 0 auto;
+  flex-basis: 50%;
+}
+
+.instagram-hover {
+  background-color: rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  color: #fff;
+}
+
+.instagram-img {
+  height: 150px;
+}
+
+.instagram-img:hover > .instagram-hover {
+  opacity: 1;
+}
+
+.instagram-name {
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10;
+}
+
+.instagram-btn {
+  background-color: #fff;
+  color: #000;
+  font-size: 18px;
+  font-weight: 600;
+  min-width: 200px;
+  padding: 8px 10px;
+  text-align: center;
+}
+
 .video-responsive {
   display: block;
   height: 0;
