--- a/partials/sidebar/sidebar-related.hbs
+++ b/partials/sidebar/sidebar-related.hbs
@@ -1,7 +1,7 @@
 <aside class="rimary-sidebar sidebar u-flexColumnTop">
     <div class="sticky-top-wrap u-flex-1 u-flexColumnTop">
         <div class="sticky">
-            {{> "widget/instagram-feed"}}
+            <h2>Sidebar Related</h2>
         </div>
     </div>
 </aside>
