--- a/partials/widget/instagram-feed.hbs
+++ b/partials/widget/instagram-feed.hbs
@@ -1,4 +1,4 @@
-<div class="instagram u-overflowHidden u-hide u-relative u-paddingTop20 u-paddingBottom20 u-bgWhite">
-    <div class="instagram-wrap row"></div>
+<div class="instagram u-overflowHidden u-relative">
+    <div class="instagram-wrap"></div>
     <span class="instagram-name u-absolute"></span>
 </div>
